TemplatedList - Added CSS
To set the cursor for disabled items.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -444,6 +444,7 @@
     <Content Include="DataEditors\NumberInput\number-input.js" />
     <Content Include="DataEditors\TemplatedList\templated-list.html" />
     <Content Include="DataEditors\TemplatedList\templated-list.js" />
+    <Content Include="DataEditors\TemplatedList\templated-list.css" />
     <Content Include="DataEditors\TextInput\text-input.css" />
     <Content Include="DataEditors\TextInput\text-input.html" />
     <Content Include="DataEditors\TextInput\text-input.js" />
