--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -295,7 +295,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Composing\ContentmentComposer.cs" />
-    <Compile Include="Composing\ContentmentCompositionExtensions.cs" />
+    <Compile Include="Composing\CompositionExtensions.cs" />
     <Compile Include="DataEditors\Buttons\ButtonsDataListEditor.cs" />
     <Compile Include="Telemetry\CompositionExtensions.cs" />
     <Compile Include="Telemetry\ContentmentTelemetryComponent.cs" />
