DataList - added "Data List Item" editor
Used for the User-Defined (manual) data-source.

The UI was initially based on the ListView "layouts" prevalue editor,
with heavy modifications and refactoring.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -450,6 +450,9 @@
     <Content Include="DataEditors\ContentBlocks\content-blocks.blueprint.html" />
     <Content Include="DataEditors\ContentPicker\content-source.html" />
     <Content Include="DataEditors\ContentPicker\content-source.js" />
+    <Content Include="DataEditors\DataList\data-list.editor.css" />
+    <Content Include="DataEditors\DataList\data-list.editor.html" />
+    <Content Include="DataEditors\DataList\data-list.editor.js" />
     <Content Include="DataEditors\DataList\data-list.preview.css" />
     <Content Include="DataEditors\DataList\data-list.preview.html" />
     <Content Include="DataEditors\DataList\data-list.preview.js" />
