--- a/src/Umbraco.Community.Contentment/packages.config
+++ b/src/Umbraco.Community.Contentment/packages.config
@@ -3,7 +3,7 @@
   <package id="ClientDependency" version="1.9.9" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
-  <package id="Examine" version="1.0.2" targetFramework="net472" />
+  <package id="Examine" version="1.1.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
   <package id="ImageProcessor" version="2.7.0.100" targetFramework="net472" />
   <package id="LightInject" version="5.4.0" targetFramework="net472" />
@@ -49,9 +49,11 @@
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
   <package id="Superpower" version="2.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.6.1" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.6.1" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.13.0-rc" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.13.0-rc" targetFramework="net472" />
 </packages>
