--- a/src/Umbraco.Community.Contentment/packages.config
+++ b/src/Umbraco.Community.Contentment/packages.config
@@ -54,6 +54,6 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.13.0-rc" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.13.0-rc" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.13.0" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.13.0" targetFramework="net472" />
 </packages>
