--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -306,6 +306,7 @@
     <Compile Include="DataEditors\DataList\DataSources\UmbracoDictionaryDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\UmbracoEntityDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\UmbracoImageCropDataListSource.cs" />
+    <Compile Include="DataEditors\DataList\DataSources\UmbracoMembersDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\UmbracoMemberGroupDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\UserDefinedDataListSource.cs" />
     <Compile Include="DataEditors\DictionaryPicker\DictionaryPickerDataEditor.cs" />
