--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -1,5 +1,5 @@
 # This .editorconfig has been taken from Umbraco CMS, licensed under MIT.
-# https://github.com/umbraco/Umbraco-CMS/blob/release-8.1.0/.editorconfig
+# https://github.com/umbraco/Umbraco-CMS/blob/v9/dev/.editorconfig
 
 # top-most EditorConfig file
 root = true
@@ -26,6 +26,7 @@ dotnet_naming_rule.private_members_with_underscore.severity = suggestion
 
 dotnet_naming_symbols.private_fields.applicable_kinds           = field
 dotnet_naming_symbols.private_fields.applicable_accessibilities = private
+# dotnet_naming_symbols.private_fields.required_modifiers = abstract,async,readonly,static # all except const
 
 dotnet_naming_style.prefix_underscore.capitalization = camel_case
 dotnet_naming_style.prefix_underscore.required_prefix = _
@@ -37,5 +38,8 @@ csharp_style_var_when_type_is_apparent = true:suggestion
 csharp_style_var_elsewhere = true:suggestion
 csharp_prefer_braces = false : none
 
-[*.{js,less}]
+[*.js]
+trim_trailing_whitespace = true
+
+[*.less]
 trim_trailing_whitespace = false
