Build script - tweaks and fixes
Hit this issue...
https://docs.microsoft.com/en-us/dotnet/core/tools/sdk-errors/netsdk1005

Replaced the old "vswhere.exe" and MSBuild.exe calls with `dotnet` cli.

Removed the Umbraco package XML manifest - no longer needed.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,5 @@ artifacts/
 build/assets/
 src/packages/*/**
 /tools/*.exe
-/build/__umb/*
-/build/__nuget/*
-/build/build-push.ps1
+/build/build-push-nuget.ps1
+/build/build-push-umb.ps1
