--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Features and ideas
+    url: https://github.com/leekelleher/umbraco-contentment/discussions/new?category=ideas
+    about: Suggest an idea for this project
   - name: Umbraco Community forum
     url: https://our.umbraco.com/packages/backoffice-extensions/contentment/contentment-feedback/
     about: "For community (free) support questions, please use the Umbraco Community forum."
