:bug: Restored old issue template
It doesn't appear that GitHub Issue Form is enabled on my repository yet

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,12 +1,13 @@
----
 name: Bug report
 description: "File a bug report to help us improve."
 labels: "bug-report"
-assignees: "leekelleher"
+assignees:
+  - leekelleher
 body:
 - type: markdown
   attributes:
-    value: **Note: for support questions, please use the [Umbraco Community forum](https://our.umbraco.com)**. This repository's issues are reserved for bug reports and feature requests.
+    value: |
+      **Note: for support questions, please use the [Umbraco Community forum](https://our.umbraco.com)**. This repository's issues are reserved for bug reports and feature requests.
 - type: dropdown
   id: "contentmentVersion"
   attributes:
