Adds "Textbox List" editor

--- a/src/Umbraco.Cms.9.0.0/uSync/v9/Content/home.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/Content/home.config
@@ -43,7 +43,7 @@
     "key": "a11ccbdb-76eb-4f7d-88e0-555fb9ca0c56",
     "icon": "icon-navigation-top color-blue-grey",
     "value": {
-      "mainMenu": "umb://document/7c6bcf13fa7d4949b975ffb331ee0dcc,umb://document/3f755f025f6e42cca7ea4b769e3232b2,umb://document/f584df3eeffe42698cf41366a03f4fff"
+      "mainMenu": "umb://document/7c6bcf13fa7d4949b975ffb331ee0dcc,umb://document/3f755f025f6e42cca7ea4b769e3232b2,umb://document/f584df3eeffe42698cf41366a03f4fff,umb://document/ddf45934719e4f178cd1384d3a5a0172"
     }
   }
 ]]]></Value>
