--- a/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/homepage.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/homepage.config
@@ -26,6 +26,7 @@
     <ContentType Key="15cf8bbd-22f2-4b61-a295-18235c978614" SortOrder="0">contentPage</ContentType>
     <ContentType Key="a36df9f1-1586-4594-a85a-c99259234aeb" SortOrder="1">testDataListPage</ContentType>
     <ContentType Key="4128a049-f8bf-426a-b4ed-e1bd6df03d2c" SortOrder="2">testNotesPage</ContentType>
+    <ContentType Key="be1a660e-e7b1-49b7-8101-45095e56350a" SortOrder="3">testMiscPage</ContentType>
   </Structure>
   <GenericProperties />
   <Tabs />
