v9 demo site schema updates

--- a/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testdatalistpage.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testdatalistpage.config
@@ -4,7 +4,7 @@
     <Name>Test Data List Page</Name>
     <Icon>icon-bulleted-list color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
+    <Description>A demo page to test the data list editors</Description>
     <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
