--- a/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testnotespage.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testnotespage.config
@@ -4,7 +4,7 @@
     <Name>Test Notes Page</Name>
     <Icon>icon-alert color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
+    <Description>A demo page to test the read-only note editors</Description>
     <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
     <Variations>Nothing</Variations>
