[WIP] "Custom Value Converter" editor

--- a/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testmiscpage.config
@@ -19,6 +19,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>dfa7fb4c-3443-4f5e-a7ff-29d9ab665da6</Key>
+      <Name>Custom Value Converter</Name>
+      <Alias>customValueConverter</Alias>
+      <Definition>48bfc7e6-fe35-4cf0-ae93-e5522bc71a51</Definition>
+      <Type>Umbraco.Community.Contentment.CustomValueConverter</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="misc">Misc</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>5049c7f6-0ccb-4315-b4fb-3c860d7c39cc</Key>
       <Name>Test Textbox</Name>
       <Alias>testTextbox</Alias>
@@ -52,6 +68,12 @@
     </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Caption>Misc</Caption>
+      <Alias>misc</Alias>
+      <Type>Group</Type>
+      <SortOrder>-1</SortOrder>
+    </Tab>
     <Tab>
       <Caption>Textboxes</Caption>
       <Alias>textboxes</Alias>
