--- a/src/Umbraco.Cms.9.0.0/uSync/v9/Content/test-misc.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/Content/test-misc.config
@@ -13,6 +13,9 @@
     <Template Key="32cf5caf-9267-4cf4-8327-2dcbd24a1cd7">testMiscPage</Template>
   </Info>
   <Properties>
+    <customValueConverter>
+      <Value><![CDATA[1130]]></Value>
+    </customValueConverter>
     <testTextbox>
       <Value><![CDATA[Hello world]]></Value>
     </testTextbox>
