Enum data-source no longer binds to specific assembly version
Changed to store the assembly's `Name` as opposed to the `FullName`,
(since this contains the version and culture bindings).

Also since the data-source item's name and value are the same,
I've refactored the WebAPI method to use a `SortedSet`,
as we only need to manage a single value, not Name/FullName combo.

Fixes #197

--- a/src/Umbraco.Cms.9.0.0/uSync/v9/DataTypes/ContentmentDataListNETEnumeration.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/DataTypes/ContentmentDataListNETEnumeration.config
@@ -12,7 +12,7 @@
       "key": "Umbraco.Community.Contentment.DataEditors.EnumDataListSource, Umbraco.Community.Contentment",
       "value": {
         "enumType": [
-          "System.Console, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a",
+          "System.Console",
           "System.ConsoleColor"
         ]
       }
