--- a/src/Umbraco.Cms.9.0.0/uSync/v9/DataTypes/ContentmentDataListRenderPosition.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/DataTypes/ContentmentDataListRenderPosition.config
@@ -11,7 +11,7 @@
       "key": "Umbraco.Community.Contentment.DataEditors.EnumDataListSource, Umbraco.Community.Contentment",
       "value": {
         "enumType": [
-          "Umbraco.Cms.9.0.0, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null",
+          "Umbraco.Cms.9.0.0",
           "Umbraco.Cms.Web.Common.PublishedModels.RenderPosition"
         ]
       }
