:notebook: Updated repo files

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -7,5 +7,5 @@ contact_links:
     url: https://our.umbraco.com/packages/backoffice-extensions/contentment/contentment-feedback/
     about: "For community (free) support questions, please use the Umbraco Community forum."
   - name: "Commericial support"
-    url: https://umbrellainc.co.uk/
-    about: "For commerical (paid) support questions, please contact me via my company, Umbrella."
+    url: https://leekelleher.com/contact/
+    about: "For commerical (paid) support questions, please contact me directly."
