Demo site tweaks

--- a/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/ContentTypes/testmiscpage.config
@@ -55,7 +55,7 @@
     <Tab>
       <Caption>Textboxes</Caption>
       <Alias>textboxes</Alias>
-      <Type>Group</Type>
+      <Type>Tab</Type>
       <SortOrder>10</SortOrder>
     </Tab>
   </Tabs>
