--- a/src/Umbraco.Cms.9.0.0/uSync/v9/DataTypes/ContentmentDataListRenderPosition.config
+++ b/src/Umbraco.Cms.9.0.0/uSync/v9/DataTypes/ContentmentDataListRenderPosition.config
@@ -22,7 +22,8 @@
       "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
       "value": {
         "showDescriptions": "1",
-        "showIcons": "0"
+        "showIcons": "0",
+        "allowClear": "0"
       }
     }
   ]
