Fixed up a few uSync bits on the Umbraco v8 demo site

--- a/src/Umbraco.Cms.8.x/Umbraco.Cms.8.x.csproj
+++ b/src/Umbraco.Cms.8.x/Umbraco.Cms.8.x.csproj
@@ -592,6 +592,7 @@
     <Content Include="uSync\v8\Templates\testmiscpage.config" />
     <Content Include="uSync\v8\Templates\testnotespage.config" />
     <Content Include="uSync\v8\Templates\_layout.config" />
+    <Content Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="assets\img\" />
