--- a/src/Umbraco.Cms.8.x/uSync/v8/Macros/Sitemap.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Macros/Sitemap.config
@@ -3,7 +3,7 @@
   <Name>Sitemap</Name>
   <MacroSource>~/Views/MacroPartials/sitemap.cshtml</MacroSource>
   <MacroType>PartialView</MacroType>
-  <UseInEditor>false</UseInEditor>
+  <UseInEditor>true</UseInEditor>
   <DontRender>false</DontRender>
   <CachedByMember>false</CachedByMember>
   <CachedByPage>false</CachedByPage>
