Umbraco v8 demo site - switched a Data List
to use the CheckboxList editor instead of RadioButtonList.
As I noticed that I hadn't had a CheckboxList editor configured.

--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataFileSystem.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListDataFileSystem.config
@@ -19,11 +19,11 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.CheckboxListDataListEditor, Umbraco.Community.Contentment",
       "value": {
+        "checkAll": "1",
         "showDescriptions": "1",
-        "showIcons": "1",
-        "allowClear": "0"
+        "showIcons": "1"
       }
     }
   ]
