[WIP] Editor Notes
https://github.com/leekelleher/umbraco-contentment/discussions/187

--- a/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testnotespage.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testnotespage.config
@@ -19,6 +19,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>e22678ec-0d78-4974-9665-ffac08cba82f</Key>
+      <Name>Editor Notes</Name>
+      <Alias>editorNotes</Alias>
+      <Definition>569416cf-60c4-483a-a117-8ea8ad4bc055</Definition>
+      <Type>Umbraco.Community.Contentment.EditorNotes</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="notes">Notes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>df5205b7-147f-4bf6-9b33-32b90840f4e0</Key>
       <Name>Notes Rich Text</Name>
       <Alias>notesRichText</Alias>
@@ -27,7 +43,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>20</SortOrder>
       <Tab Alias="notes">Notes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -43,7 +59,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="renderMacro">Render Macro</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -59,7 +75,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>10</SortOrder>
       <Tab Alias="templatedLabel">Templated Label</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -70,21 +86,21 @@
   <Tabs>
     <Tab>
       <Caption>Notes</Caption>
-      <SortOrder>0</SortOrder>
       <Alias>notes</Alias>
       <Type>Tab</Type>
+      <SortOrder>10</SortOrder>
     </Tab>
     <Tab>
       <Caption>Render Macro</Caption>
-      <SortOrder>1</SortOrder>
       <Alias>renderMacro</Alias>
       <Type>Tab</Type>
+      <SortOrder>20</SortOrder>
     </Tab>
     <Tab>
       <Caption>Templated Label</Caption>
-      <SortOrder>2</SortOrder>
       <Alias>templatedLabel</Alias>
       <Type>Tab</Type>
+      <SortOrder>30</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
