--- a/src/Umbraco.Cms.9.x/uSync/v9/Content/home.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/Content/home.config
@@ -51,6 +51,21 @@
     <pageBlocks>
       <Value><![CDATA[[
   {
+    "elementType": "24522ebf-901d-4aa2-a472-61b6181fd0e5",
+    "key": "1b4ef372-85ff-4b40-b2d9-43fd23a88611",
+    "icon": "icon-megaphone color-blue-grey",
+    "value": {
+      "heading": "Welcome",
+      "intro": "<p>This is some <strong>introduction</strong> text.</p>",
+      "link": [
+        {
+          "name": "Click here to go to the Data List page.",
+          "udi": "umb://document/3f755f025f6e42cca7ea4b769e3232b2"
+        }
+      ]
+    }
+  },
+  {
     "elementType": "55877ddd-640f-4d73-8b53-f8c671e8415a",
     "key": "9f93eeb1-ab4e-4c98-903c-ca1b7693b773",
     "icon": "icon-code color-blue-grey",
