--- a/src/Umbraco.Cms.9.x/uSync/v9/DataTypes/ContentmentContentBlocksContent.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/DataTypes/ContentmentContentBlocksContent.config
@@ -23,6 +23,14 @@
         "overlaySize": "medium",
         "enablePreview": "0"
       }
+    },
+    {
+      "key": "24522ebf-901d-4aa2-a472-61b6181fd0e5",
+      "value": {
+        "nameTemplate": "Call To Action: {{heading}}",
+        "overlaySize": "small",
+        "enablePreview": "0"
+      }
     }
   ],
   "enableFilter": "0",
