Reworked assets build script
Changed from hooking on the `PostBuildEvent` to `PreBuildEvent`,
and moved the copying of assets to the target website to a separate
`*.targets` file, that the target website can reference.

Done as a PULL rather than PUSH.

Removed all the extra bits that were no longer needed.

--- a/src/Umbraco.Cms.8.x/Umbraco.Cms.8.x.csproj
+++ b/src/Umbraco.Cms.8.x/Umbraco.Cms.8.x.csproj
@@ -601,6 +601,7 @@
     <Folder Include="assets\img\" />
     <Folder Include="Views\MacroPartials\" />
   </ItemGroup>
+  <Import Project="..\..\build\_vs-copy-assets.targets" />
   <ItemGroup>
     <ProjectReference Include="..\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj">
       <Project>{7d440d19-44d0-474f-8bab-a7ddf4062994}</Project>
