Refactored the Test Data List page for the demo site
uSync didn't seem to like the mishmash of tabs/fieldsets and non-fieldsets.

--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testdatalistpage.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testdatalistpage.config
@@ -179,7 +179,7 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>4ca586fe-90d0-45a0-9447-64f4305b0442</Key>
+      <Key>2013b046-62c0-406c-ab91-c6e684072976</Key>
       <Name>Data List uCssClassName</Name>
       <Alias>dataListUCssClassName</Alias>
       <Definition>89179373-0e13-4d02-9273-728e205a9544</Definition>
@@ -187,8 +187,8 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="web">Web</Tab>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="web/web">Web</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -459,7 +459,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>1</SortOrder>
       <Tab Alias="web/xmlSitemap">XML Sitemap</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -475,7 +475,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>2</SortOrder>
       <Tab Alias="web/xmlSitemap">XML Sitemap</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -488,18 +488,6 @@
       <Caption>.NET</Caption>
       <Alias>neT</Alias>
       <Type>Tab</Type>
-      <SortOrder>0</SortOrder>
-    </Tab>
-    <Tab>
-      <Caption>XML Sitemap</Caption>
-      <Alias>web/xmlSitemap</Alias>
-      <Type>Group</Type>
-      <SortOrder>0</SortOrder>
-    </Tab>
-    <Tab>
-      <Caption>Data</Caption>
-      <Alias>data</Alias>
-      <Type>Tab</Type>
       <SortOrder>1</SortOrder>
     </Tab>
     <Tab>
@@ -509,8 +497,14 @@
       <SortOrder>1</SortOrder>
     </Tab>
     <Tab>
-      <Caption>Umbraco</Caption>
-      <Alias>umbraco</Alias>
+      <Caption>Web</Caption>
+      <Alias>web/web</Alias>
+      <Type>Group</Type>
+      <SortOrder>1</SortOrder>
+    </Tab>
+    <Tab>
+      <Caption>Data</Caption>
+      <Alias>data</Alias>
       <Type>Tab</Type>
       <SortOrder>2</SortOrder>
     </Tab>
@@ -521,28 +515,40 @@
       <SortOrder>2</SortOrder>
     </Tab>
     <Tab>
+      <Caption>XML Sitemap</Caption>
+      <Alias>web/xmlSitemap</Alias>
+      <Type>Group</Type>
+      <SortOrder>2</SortOrder>
+    </Tab>
+    <Tab>
+      <Caption>Umbraco</Caption>
+      <Alias>umbraco</Alias>
+      <Type>Tab</Type>
+      <SortOrder>3</SortOrder>
+    </Tab>
+    <Tab>
       <Caption>Members</Caption>
       <Alias>umbraco/members</Alias>
       <Type>Group</Type>
-      <SortOrder>2</SortOrder>
+      <SortOrder>3</SortOrder>
     </Tab>
     <Tab>
       <Caption>Web</Caption>
       <Alias>web</Alias>
       <Type>Tab</Type>
-      <SortOrder>3</SortOrder>
+      <SortOrder>4</SortOrder>
     </Tab>
     <Tab>
       <Caption>Users</Caption>
       <Alias>umbraco/users</Alias>
       <Type>Group</Type>
-      <SortOrder>3</SortOrder>
+      <SortOrder>4</SortOrder>
     </Tab>
     <Tab>
       <Caption>Schema</Caption>
       <Alias>umbraco/schema</Alias>
       <Type>Group</Type>
-      <SortOrder>4</SortOrder>
+      <SortOrder>5</SortOrder>
     </Tab>
   </Tabs>
 </ContentType>
